...
              Icons.account_tree,
              size: 100,
              color: iconColor,
            ),
            const SizedBox(height: 20),
            Text(
              'Welcome to GraphGo',
              style: currentTheme.textTheme.headlineMedium?.copyWith(
                    fontSize: (currentTheme.textTheme.headlineMedium?.fontSize ?? 28) * 1.15,
                    fontWeight: FontWeight.bold,
                    color: welcomeTextColor,
                  ),
            ),
...
